# FDSolver

./: CMakeLists.txt  LICENSE  README.md
data/: fd_crank_nicolson_result.txt  fd_explicit_result.txt  fd_implicit_result.txt
examples/: fdsolver_crank_nicolson.c  fdsolver_explicit_example.c  fdsolver_implicit_example.c
include/: fdsolve.h  fdsolver.h  init_grid_and_initial.h  solve_crank_nicolson.h  solve_explicit.h  solve_implicit.h  thomas_solve.h
script/: plot.py
src/: fdsolver.c  init_grid_and_initial.c  solve_crank_nicolson.c  solve_explicit.c  solve_implicit.c  thomas_solve.c
